--- a/package.json
+++ b/package.json
@@ -9,16 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.0",
+    "@heroicons/react": "^1.0.6",
+    "@tailwindcss/typography": "^0.5.2",
+    "firebase": "^9.6.11",
+    "heroicons": "^1.0.6",
     "next": "12.1.5",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-firebase-hooks": "^5.0.3",
+    "react-markdown": "^8.0.3",
+    "reactfire": "^4.2.1",
+    "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
     "@types/node": "17.0.27",
     "@types/react": "18.0.7",
     "@types/react-dom": "18.0.0",
+    "autoprefixer": "^10.4.5",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.24",
     "typescript": "4.6.3"
   }
 }
